--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -44,7 +44,7 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+      url: https://${{ github.repository_owner }}.github.io/${{ github.repository }}/  # Construa a URL manualmente
     runs-on: windows-latest
     needs: build
     steps:
